--- a/labofront/src/css/quasar.variables.scss
+++ b/labofront/src/css/quasar.variables.scss
@@ -20,5 +20,6 @@ $dark      : #1D1D1D;
 
 $positive  : #21BA45;
 $negative  : #C10015;
+$red  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
